# lakehopper

./: .buildinfo  .gitignore  CNAME  README.html  README.md  _config.yml  _toc.yml  genindex.html  objects.inv  requirements.txt  search.html  searchindex.js
.ipynb_checkpoints/: interation_3-checkpoint.ipynb  iteration_1-checkpoint.ipynb
design/: .~lock.iteration_5-bom-and-receipt.ods#  README.html  README.md  iteration_1.html  iteration_1_ar.html  iteration_2.html  iteration_2.ipynb  iteration_2_weight_and_airfoil.html  iteration_3-motocalc-project.txt  iteration_3.html  iteration_3.ipynb  iteration_3_propulsion.html  iteration_3_propulsion.ipynb  iteration_4.html  iteration_4.ipynb  iteration_4_propulsion_weight.html  iteration_5-bom.csv  iteration_5-bom.ods  iteration_5-freecad.FCStd  (+8 more)
planner/: Cargo.toml  README.html  README.md  tauri.conf.json
planner/scripts/: flatten_grb.py  plot_nav_perf_results.py
planner/src/: coord_ext.rs  crs.rs  dgc.rs  droneguide.rs  geo_geojson.rs  geo_io.rs  grb.rs  intersection.rs  line_string_ratio.rs  main.rs  modulo.rs  winding.rs
planner/src/mpi/: concave_convex.rs  intersection.rs  iter.rs  mod.rs  mpi.rs  neighbors.rs
planner/src/nav_graph/: create.rs  graph_geojson.rs  graph_types.rs  mod.rs  planning.rs  shortest_path.rs  visibility-BAK-with-concave.rs  visibility.rs
planner/src/nav_graph/bounded_astar/: mod.rs
planner/src/server/: client_msg.rs  common.rs  handle.rs  mod.rs  server_msg.rs
planner/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
planner/ui/src/: main.ts
(+101 files in other folders)
