[package]
name = "lakehopper-nav"
version = "0.1.0"
authors = ["Pieter Fiers"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
reqwest = { version = "0", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo-types = { version = "0.7.4", features = ["serde"] }
geo = "0.20.1"
geos = { version = "8.1.0", features = ["geo"] }
geojson = { version = "0.23.0", features = ["geo-types"] }
log = "0.4.17"
zip = "0.6.2"
shapefile = { version = "0.3.0", features = ["geo-types"] }
geo-svg = "0.5.0"
proj = { version = "0.26.0", features = ["geo-types"] }
petgraph = "0.6.2"
derive_more = "0.99.17"
ordered-float = "3.0.0"
# tauri = { version = "1.0.0", features = ["api-all"] }
take-until = "0.1.0"
tokio-tungstenite = "0.17.1"
futures = "0.3.21"
strum_macros = "0.24.0"
approx = "0.5.1"
sqlx = { version = "0.5.13", features = ["sqlite", "runtime-tokio-rustls"] }
geozero = { version = "0.9.4", features = ["with-gpkg"] }
num-traits = "0.2.15"
trait_enum = "0.5.0"
polylabel = "2.4.1"
